Writing innerDecodeFromInts and adding Javadoc for public methods in SPModel.